# epamReto

./: .dockerignore  .env.example  .gitignore  DEMO_QUERIES.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  fly.toml  pyproject.toml  query1_result.json  query2_fixed.json  query2_result.json  query3_body.json  query3_production.json  query3_result.json  render.yaml  start_backend_clean.ps1  test_all_features.ps1  test_backend.ps1
.cursor/: mcp.json.example
.cursor/prompts/: nexo-security-prompt.md
.cursor/rules/: nexo-security-workflow.mdc  security.mdc
apps/api/: chat_response.json  pyproject.toml  test_llm_standalone.py  test_synthesizer_standalone.py
apps/api/data/cache/embeddings-disk/: cache.db
apps/api/data/cache/pokeapi-disk/: cache.db  cache.db-shm  cache.db-wal
apps/api/src/api/: __init__.py  agent_trace_store.py  auth.py  conversations_store.py  dependencies.py  main.py  middleware.py  rate_limit.py
apps/api/src/api/routers/: __init__.py  auth.py  chat.py  compare.py  conversations.py  observability.py  pokedex.py  reports.py  saved_teams.py  teams.py
apps/api/tests/: __init__.py  test_api_routers.py  test_health.py
apps/pokedex-arcana-frontend/: .cursorrules  .env.example  AGENTS.md  CURSOR_PROMPT.md  README.md  SETUP.md  package-lock.json  package.json  vercel.json  vite.config.ts
apps/pokedex-arcana-frontend/src/: routeTree.gen.ts  router.tsx  styles.css
apps/pokedex-arcana-frontend/src/components/layout/: TopNav.tsx
apps/pokedex-arcana-frontend/src/components/pokemon/: ConfidenceBadge.tsx  DamageCard.tsx  PokemonCard.tsx  PokemonModal.tsx  SourcesPopover.tsx  TypeChip.tsx
apps/pokedex-arcana-frontend/src/features/chat/: Composer.tsx  MessageBubble.tsx  PipelineIndicator.tsx  useChat.ts
apps/pokedex-arcana-frontend/src/features/compare/: PokemonPickerDialog.tsx
apps/pokedex-arcana-frontend/src/lib/: auth.ts  route-guards.ts
apps/pokedex-arcana-frontend/src/lib/api/: client.ts  types.ts
apps/pokedex-arcana-frontend/src/routes/: __root.tsx  compare.tsx  explore.tsx  index.tsx  login.tsx  team.tsx
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/explore/: page.tsx
apps/web/app/teams/: page.tsx
apps/web/app/teams/builder/: page.tsx
apps/web/components/: AgentGraphModal.tsx  AgentTracePanel.tsx  Chat.tsx  CitationPopover.tsx  ConfidenceBadge.tsx  DamageVisualizer.tsx  FilterBar.tsx  HomeClient.tsx  PokemonCard.tsx  PokemonDetailModal.tsx  PokemonGrid.tsx  PokemonSprite.tsx  TeamBuilder.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  popover.tsx  tabs.tsx
apps/web/lib/: api.ts  pokemon-utils.ts  sprites.ts  typeChart.ts  types.ts
data/processed/: pokemon.duckdb
data/raw/: .gitkeep  bulbapedia_anime_manga_pages.txt  bulbapedia_pages_100.txt
data/raw/bulbapedia/: Abomasnow_(Pok%C3%A9mon).html  Abra_(Pok%C3%A9mon).html  Absol_(Pok%C3%A9mon).html  Aerodactyl_(Pok%C3%A9mon).html  Aggron_(Pok%C3%A9mon).html  Aipom_(Pok%C3%A9mon).html  Alakazam_(Pok%C3%A9mon).html  Altaria_(Pok%C3%A9mon).html  Ambipom_(Pok%C3%A9mon).html  Ampharos_(Pok%C3%A9mon).html  Anorith_(Pok%C3%A9mon).html  Arbok_(Pok%C3%A9mon).html  Arcanine_(Pok%C3%A9mon).html  Arceus_(Pok%C3%A9mon).html  Ariados_(Pok%C3%A9mon).html  Armaldo_(Pok%C3%A9mon).html  Aron_(Pok%C3%A9mon).html  Articuno_(Pok%C3%A9mon).html  Azelf_(Pok%C3%A9mon).html  Azumarill_(Pok%C3%A9mon).html  Azurill_(Pok%C3%A9mon).html  Bagon_(Pok%C3%A9mon).html  Baltoy_(Pok%C3%A9mon).html  Banette_(Pok%C3%A9mon).html  Barboach_(Pok%C3%A9mon).html  Bastiodon_(Pok%C3%A9mon).html  Bayleef_(Pok%C3%A9mon).html  Beautifly_(Pok%C3%A9mon).html  Beedrill_(Pok%C3%A9mon).html  Beldum_(Pok%C3%A9mon).html  Bellossom_(Pok%C3%A9mon).html  Bellsprout_(Pok%C3%A9mon).html  Bibarel_(Pok%C3%A9mon).html  Bidoof_(Pok%C3%A9mon).html  Blastoise_(Pok%C3%A9mon).html  Blaziken_(Pok%C3%A9mon).html  Blissey_(Pok%C3%A9mon).html  Bonsly_(Pok%C3%A9mon).html  Breloom_(Pok%C3%A9mon).html  Bronzong_(Pok%C3%A9mon).html  (+462 more)
data/raw/smogon/: absol.json  aegislash.json  aggron.json  alakazam.json  amoonguss.json  armaldo.json  azumarill.json  bagon.json  banette.json  beldum.json  bisharp.json  blastoise.json  blaziken.json  blissey.json  breloom.json  celesteela.json  chansey.json  charizard.json  chimecho.json  clamperl.json  claydol.json  clefable.json  corviknight.json  cradily.json  deoxys.json  ditto.json  dragapult.json  dragonite.json  dusclops.json  empoleon.json  espeon.json  excadrill.json  ferrothorn.json  flygon.json  garchomp.json  gastrodon.json  gengar.json  gliscor.json  groudon.json  gyarados.json  (+60 more)
eval/: README.md  __init__.py  _fixtures_registry.py  dataset.json  run_correctness.py  run_ragas.py  test_dataset_schema.py
eval/datasets/: golden_qa.example.jsonl
scripts/: create_strategy_collection.py  run_query3_once.py
