[project]
name = "pokedex-api"
version = "0.1.0"
description = "Capa HTTP: FastAPI orquestando agentes"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pokedex-shared",
    "pokedex-domain",
    "pokedex-infrastructure",
    "pokedex-agents",
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.36",
    "sse-starlette>=2.1,<3",
    "pydantic>=2.9,<3",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
